--- a/src/components/layouts/header/header.module.scss
+++ b/src/components/layouts/header/header.module.scss
@@ -4,10 +4,8 @@
     @include flex-horizontal-center;
     justify-content: space-between;
 
-    .right-size {
+    .right-side {
         @include flex-horizontal-center;
         gap: 20px;
     }
 }
-
-
