--- a/src/components/screens/Home/home.template.html
+++ b/src/components/screens/Home/home.template.html
@@ -1,3 +1,8 @@
 <div class="home">
-    <h1>Hello</h1>
+    <div>
+        <component-card-info></component-card-info>
+    </div>
+    <div>
+        <component-actions></component-actions>
+    </div>
 </div>
